# udipe

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  devbuild.sh  lychee.toml  vcpkg-configuration.json  vcpkg.json
.github/: dependabot.yml
.github/workflows/: ci.yml
CI/: Dockerfile  Dockerfile.alma  Dockerfile.debian  Dockerfile.ubuntu
benches/: CMakeLists.txt  micro_benchmarks.c
cmake/: StupidCPackBoilerplate.cmake  StupidConfigBoilerplate.cmake  UdipeConfig.cmake.in
doc/: book.toml
doc/src/: SUMMARY.md  design.md  doxygen  index.md  logging-errors.md  reference.md  udipe.xcf
examples/: CMakeLists.txt  configure_allocator.c  configure_buffering.c  context_lifecycle.c  custom_allocator.c  log_to_tempfile.c
include/: udipe.h
include/udipe/: allocator.h  benchmark.h  benchmarks.h  buffer.h  command.h  connect.h  context.h  duration.h  future.h  log.h  micro_benchmarks.h  nodiscard.h  pointer.h  result.h  tests.h  time.h  unit_tests.h  visibility.h
src/: address_wait.c  address_wait.h  allocator.c  allocator.h  arch.h  atomic_wait.c  atomic_wait.h  benchmark.c  benchmark.h  benchmarks.c  bit_array.c  bit_array.h  bitmap.c  bitmap.h  bits.c  bits.h  buffer.c  buffer.h  command.c  command.h  connect.c  connect.h  context.c  context.h  countdown.c  countdown.h  duration.h  error.c  error.h  event.h  fd.h  format.h  future.c  future.h  inpoll.c  inpoll.h  log.c  log.h  memory.c  memory.h  (+19 more)
src/benchmark/: density_filter.c  density_filter.h  distribution.c  distribution.h  distribution_log.c  distribution_log.h  distribution_pool.c  distribution_pool.h  numeric.c  numeric.h  outlier_filter.c  outlier_filter.h  statistics.c  statistics.h  temporal_filter.c  temporal_filter.h
src/future/: allocator.c  allocator.h  collective_upstream.h  epoll_any.h  epoll_event_pair.c  epoll_event_pair.h  epoll_latch_event.h  inner_fd.h  inpoll_event_pair.c  inpoll_event_pair.h  inpoll_latch_event.h  join_state.h  latched_inpoll.c  latched_inpoll.h  outcome.h  state.h  status.h  status_ops.c  status_ops.h  status_sync.h  timer_repeat_state.h  type.h  unordered_state.h  wait.c  wait.h
src/future/allocator/: context_cache.c  context_cache.h  pointer_cache.c  pointer_cache.h  storage_page.c  storage_page.h  sync_caches.c  sync_caches.h  thread_cache.c  thread_cache.h
src/sys/: memory.c  memory.h  thread_name.c
tests/: CMakeLists.txt  basic_lifecycle.c  unit_tests.c
